<resources>
    <string name="app_name">maxApp</string>
    <string name="screen_dadoscliente">Dados do cliente</string>
    <string name="screen_historicopedidos">Hist. de Pedidos</string>
    <string name="screen_alvaras">Alvarás</string>
    <string name="demo_txt_nomefantasia">DROGRARIA CAMPESTRE</string>
    <string name="demo_txt_codigorazaosocial">40.795 - A E D REMEDIOS E PERFUMARIA - EIRELI - M</string>
    <string name="txt_nada_encontrado_pt2">Não há alvarás para exibir, verifique com o responsável pelo ERP</string>
    <string name="txt_nada_encontrado_pt1">Nada encontrado...</string>
    <string name="txt_content_logo">Logotipo Maxima</string>
    <string name="txt_content_sem_alvara">Imagem sem alvarás</string>
    <string name="label_txt_dados_cliente">Dados do cliente</string>
    <string name="label_txt_cpf">CPF:</string>
    <string name="label_txt_cnpj">CNPJ:</string>
    <string name="label_txt_ramo_atividade">Ramo de atividade:</string>
    <string name="label_txt_enderecos">Endereços:</string>
    <string name="label_txt_contatos">Contatos</string>
    <string name="label_btn_status_cliente">Verificar Status do Cliente</string>
    <string name="txt_status_pedido_erp">Status do pedido no ERP</string>
    <string name="txt_letra_teste">B</string>
    <string name="txt_img_iconlegenda">Icone de legenda</string>
    <string name="txt_legenda_orcamento">Orçamento</string>
    <string name="txt_legenda_cancelado">Posição no ERP Cancelado</string>
    <string name="txt_legenda_faturado">Posição no ERP Faturado</string>
    <string name="txt_legenda_montado">Posição no ERP Montado</string>
    <string name="txt_legenda_liberado">Posição no ERP Liberado</string>
    <string name="txt_legenda_bloqueado">Posição no ERP Bloqueado</string>
    <string name="txt_posicao_pendente">Posição no ERP Pendente</string>
    <string name="txt_legenda_recusado">Pedido recusado pelo ERP</string>
    <string name="txt_legenda_processamento">Em processamento por parte do FV</string>
    <string name="label_legenda_critica">Crítica</string>
    <string name="txt_img_critica">Crítica</string>
    <string name="txt_legenda_falhatotal">Falha total</string>
    <string name="txt_legenda_falha_parcial">Falha parcial</string>
    <string name="txt_legenda_sucesso">Sucesso</string>
    <string name="txt_legenda_retorno">Aguardando retorno do ERP</string>
    <string name="txt_label_legendas">Legendas</string>
    <string name="txt_label_telemarketing">Pedido feito pelo Telemarketing</string>
    <string name="txt_label_devolucao">Pedido com devolução</string>
    <string name="txt_label_pedido_cancelado">Pedido cancelado no ERP</string>
    <string name="txt_pedido_falta">Pedido com falta</string>
    <string name="txt_label_pedido_corte">Pedido sofreu corte</string>
    <string name="txt_img_contato">Icones de contato</string>
    <string name="txt_label_telefone">Telefone:</string>
    <string name="txt_label_celular">Celular:</string>
    <string name="txt_label_conjugue">Cônjugue:</string>
    <string name="txt_label_tipo">Tipo:</string>
    <string name="txt_label_hobbie">Hobbie</string>
    <string name="txt_nao_informado">Não Informado</string>
    <string name="txt_label_time">Time:</string>
    <string name="txt_label_nasc_conjugue">Data Nasc. Cônjugue:</string>
    <string name="txt_label_nasc">Data Nasc.:</string>
    <string name="txt_label_email">E-mail:</string>
    <string name="txt_img_pedido">Icone em pedido</string>
    <string name="txt_label_cliente">Cliente:</string>
    <string name="txt_label_num_ped">Nº Ped. RCA/ERP:</string>
    <string name="txt_valor_exemplo">R$ 0,00</string>
</resources>
