<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo_tela_card"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCliente"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:contentPaddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cor_fundo_card"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="-3dp">

            <TextView
                android:id="@+id/labelDadosDoCliente"
                style="@style/TextoDadosCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/santral_bold"
                android:text="@string/txt_label_cliente"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Barra de separação-->
            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:background="#c0c0c0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/labelDadosDoCliente"
                app:layout_constraintTop_toBottomOf="@+id/labelDadosDoCliente" />

            <TextView
                android:id="@+id/txtCodigoRazaoSocial"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/demo_txt_codigorazaosocial"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtNomeFantasia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/txtNomeFantasia"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/demo_txt_nomefantasia"
                android:textColor="#606060"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/labelCPF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCodigoRazaoSocial" />

            <TextView
                android:id="@+id/labelCPF"
                style="@style/LabelDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_txt_cpf"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/labelCNPJ"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomeFantasia" />

            <TextView
                android:id="@+id/labelCNPJ"
                style="@style/LabelDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_txt_cnpj"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/labelRamoAtividade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCPF" />

            <TextView
                android:id="@+id/labelRamoAtividade"
                style="@style/LabelDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_txt_ramo_atividade"
                app:layout_constraintBottom_toTopOf="@+id/labelEnderecos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelCNPJ" />

            <TextView
                android:id="@+id/labelEnderecos"
                style="@style/LabelDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label_txt_enderecos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRamoAtividade" />

            <TextView
                android:id="@+id/txtCPF"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelCPF"
                app:layout_constraintStart_toEndOf="@+id/labelCPF" />

            <TextView
                android:id="@+id/txtCNPJ"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelCNPJ"
                app:layout_constraintStart_toEndOf="@+id/labelCNPJ" />

            <TextView
                android:id="@+id/txtRamoAtividade"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelRamoAtividade"
                app:layout_constraintStart_toEndOf="@+id/labelRamoAtividade" />

            <TextView
                android:id="@+id/txtEndereco"
                style="@style/TextoDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/labelEnderecos"
                app:layout_constraintStart_toEndOf="@+id/labelEnderecos" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCliente">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:contentPaddingTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btnVerificarStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cor_fundo_card"
                    tools:layout_editor_absoluteX="-1dp"
                    tools:layout_editor_absoluteY="-3dp">

                    <TextView
                        android:id="@+id/labelContatos"
                        style="@style/TextoDadosCliente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/santral_bold"
                        android:text="@string/label_txt_contatos"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Barra de separação-->
                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:background="#c0c0c0"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/labelContatos"
                        app:layout_constraintTop_toBottomOf="@+id/labelContatos" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewContatos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labelContatos"
                        tools:itemCount="15" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerificarStatus"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_btn_status_cliente"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColorLink="#638735"
                android:textSize="12sp"
                app:backgroundTint="#638735"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>